v146
(xx/03/17)

Changes / Improvements / Optimizations:
General | Wlan: 'disable power save' on boot, is now a service, installed when WiFi is enabled in 'dietpi-config' or via 'dietpi-set_hardware'.
General | DietPi RPi Kernel: Updated to latest.
DietPi-Software | If NTPD is used (default on DietPi) for time sync, and, NTPD fails to sync, DietPi-Software will now exit, to prevent further issues with incorrect time during software installations: https://github.com/Fourdee/DietPi/issues/786
DietPi-Software | Syncthing-inotify: Installation updated to 0.8.5 (thanks John!)
RPi Zero W | Now fully supported (including onboard WiFi/BT): https://github.com/Fourdee/DietPi/issues/787

Bug fixes:
General | RPi: Resolved an issue with sudo not having setuid bit set. Many thanks to @WolfganP for the fix: https://github.com/Fourdee/DietPi/issues/794
DietPi-Software | Gogs: Resolved issues with URL failing connection test due to them being renamed: https://github.com/Fourdee/DietPi/issues/793

-----------------------------------------------------------------------------------------------------------

v145
(04/03/17)

Changes / Improvements / Optimizations:
DietPi-Automation | Automatic format of USB drive: This feature has now been disabled and is no longer supported. This is due to the vast changes with how DietPi handles external drives: https://github.com/Fourdee/DietPi/issues/751#issuecomment-281163299
DietPi-Backup | Backup location: now has a list option, which allows user to select from all active mounts on system: https://github.com/Fourdee/DietPi/issues/751#issuecomment-281689544
DietPi-Cloudshell | Storage locations: now has a list option, which allows user to select from all active mounts on system.