@@ -34,7 +34,7 @@
 	#-----------------------------------------------------------------------------------
 	if [ "$INPUT_MODE" = "status" ]; then
 
-		MAX_LOOPS=15
+		MAX_LOOPS=20
 		CURRENT_LOOP=1
 		while (( $CURRENT_LOOP <= $MAX_LOOPS ))
 		do
@@ -55,37 +55,45 @@
 
 		done
 
-	#Run NTPD if enabled
+	#Run NTPD if enabled and
 	else
 
-		#clear status file
-		if [ -f "$FP_EXIT_CODE" ]; then
+		#Dont run twice
+		if (( $(ps aux | grep -ci -m1 '[[:space:]][n]tpd') )); then
 
-			rm "$FP_EXIT_CODE"
+			/DietPi/dietpi/func/dietpi-notify 2 "NTPD: Already is already running"
 
-		fi
-
-		NTPD_UPDATE_MODE=$(cat /DietPi/dietpi.txt | grep -m1 '^ntpd_update_mode=' | sed 's/.*=//')
-
-		#NTPD: run, exit when updated.
-		if (( $NTPD_UPDATE_MODE >= 1 && $NTPD_UPDATE_MODE <= 3 )); then
-
-			/DietPi/dietpi/func/dietpi-notify 2 "NTPD: Running time sync update (+thread)"
-			killall -w ntpd &> /dev/null
-			ntpd -gq -l /var/log/ntpd.log &> /dev/null
-			EXIT_CODE=$?
-
-		#systemD-timesyncd/other method: assume status is ok
 		else
 
-			/DietPi/dietpi/func/dietpi-notify 0 "NTPD: non-NTPD mode detected. Completed"
-			EXIT_CODE=0
+			#clear status file
+			if [ -f "$FP_EXIT_CODE" ]; then
+
+				rm "$FP_EXIT_CODE"
+
+			fi
+
+			NTPD_UPDATE_MODE=$(cat /DietPi/dietpi.txt | grep -m1 '^ntpd_update_mode=' | sed 's/.*=//')
+
+			#NTPD: run, exit when updated.
+			if (( $NTPD_UPDATE_MODE >= 1 && $NTPD_UPDATE_MODE <= 3 )); then
+
+				/DietPi/dietpi/func/dietpi-notify 2 "NTPD: Running time sync update (+thread)"
+				ntpd -gq -l /var/log/ntpd.log &> /dev/null
+				EXIT_CODE=$?
+
+			#systemD-timesyncd/other method: assume status is ok
+			else
+
+				/DietPi/dietpi/func/dietpi-notify 0 "NTPD: non-NTPD mode detected. Completed"
+				EXIT_CODE=0
+				echo $EXIT_CODE > "$FP_EXIT_CODE"
+
+			fi
+
+			# - log status of completion, prevent software installs: https://github.com/Fourdee/DietPi/issues/786
 			echo $EXIT_CODE > "$FP_EXIT_CODE"
 
 		fi
-
-		# - log status of completion, prevent software installs: https://github.com/Fourdee/DietPi/issues/786
-		echo $EXIT_CODE > "$FP_EXIT_CODE"
 
 	fi
 	#-----------------------------------------------------------------------------------
