@@ -1,12 +1,16 @@
 v146
 (xx/03/17)
 
+New Device:
+RPi Zero W | Now fully supported (including onboard WiFi/BT): https://github.com/Fourdee/DietPi/issues/787
+
 Changes / Improvements / Optimizations:
 General | Wlan: 'disable power save' on boot, is now a service, installed when WiFi is enabled in 'dietpi-config' or via 'dietpi-set_hardware'.
 General | DietPi RPi Kernel: Updated to latest.
+DietPi-Drive_Manager | Added support for F2FS filesystem: https://github.com/Fourdee/DietPi/issues/802
+DietPi-Drive_Manager | Transfer RootFS now allows for selection of filesystem types on target partition (eg: f2fs), RPi only: https://github.com/Fourdee/DietPi/issues/802
 DietPi-Software | If NTPD is used (default on DietPi) for time sync, and, NTPD fails to sync, DietPi-Software will now exit, to prevent further issues with incorrect time during software installations: https://github.com/Fourdee/DietPi/issues/786
 DietPi-Software | Syncthing-inotify: Installation updated to 0.8.5 (thanks John!)
-RPi Zero W | Now fully supported (including onboard WiFi/BT): https://github.com/Fourdee/DietPi/issues/787
 
 Bug fixes:
 General | RPi: Resolved an issue with sudo not having setuid bit set. Many thanks to @WolfganP for the fix: https://github.com/Fourdee/DietPi/issues/794
